...
    
    // MARK: - Helpers for Configuring
    private func configureSearchController() {
        searchController = UISearchController(searchResultsController: nil)
        searchController.searchResultsUpdater = self
        searchController.obscuresBackgroundDuringPresentation = false
        searchController.searchBar.placeholder = "Search for a Pro"
        navigationItem.searchController = searchController
        definesPresentationContext = true
    }
    
    private func configureCellSize() {
        tableView.rowHeight = UITableView.automaticDimension
...
        
        let sortByNumRatingAction = UIAlertAction(title: ProSortingAttribute.numRatings.rawValue, style: .default) { _ in
            self.proStore.sortProsWithinSpecialtyGroups(by: .numRatings)
            self.tableView.reloadData()
        }
        
        let cancelAction = UIAlertAction(title: "Cancel", style: .cancel, handler: nil)
        
        ac.addAction(sortByCompanyNameAction)
        ac.addAction(sortByRatingAction)
        ac.addAction(sortByNumRatingAction)
        ac.addAction(cancelAction)
        
...
